if I wanted a lightbox?

--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
       <!-- TB purchase process -->
       <article class="slide">
         <a class="progressive img" href="portfolio/ticketbiscuit.html" title="check out my TicketBiscuit case study">
-          <img class="lowres" src="images/portfolio/low-res/purchase-process.jpg" data-image="images/portfolio/thumb/purchase-process.jpg">
-          <img class="overlay" src="" alt="purchase process design development">
+          <img class="lowres" alt="purchase process design development" src="images/portfolio/low-res/purchase-process.jpg" data-image="images/portfolio/thumb/purchase-process.jpg" />
         </a>
         <div class="details">
           <h3 class="red">purchase process redesign</h3>
@@ -57,8 +56,7 @@
       <!-- Transcend -->
       <article class="right slide">
         <a class="progressive img" href="portfolio/transcend.html" title="check out my Transcend case study">
-          <img class="lowres" src="images/portfolio/low-res/transcend.jpg" data-image="images/portfolio/thumb/transcend.jpg">
-          <img class="overlay" src="" alt="therapy website design development">
+          <img class="lowres" alt="therapy website design development" src="images/portfolio/low-res/transcend.jpg" data-image="images/portfolio/thumb/transcend.jpg">
         </a>
         <div class="details">
           <h3 class="red">logo &amp; custom wordpress theme</h3>
@@ -70,8 +68,7 @@
       <!-- Tower -->
       <article class="slide">
         <div class="progressive img">
-          <img class="lowres" src="images/portfolio/low-res/tower.jpg" data-image="images/portfolio/thumb/tower.jpg">
-          <img class="overlay" src="" alt="literary magazine design development">
+          <img class="lowres" src="images/portfolio/low-res/tower.jpg" data-image="images/portfolio/thumb/tower.jpg" alt="literary magazine design layout">
         </div>
         <div class="details">
           <h3 class="red">literary magazine layout &amp; curation</h3>
@@ -83,21 +80,19 @@
       <!-- Rojo Ad & Menus -->
       <article class="right slide">
         <div class="progressive img">
-          <img class="lowres" src="images/portfolio/low-res/rojo.jpg" data-image="images/portfolio/thumb/rojo.jpg">
-          <img class="overlay" src="" alt="menu ad design development">
+          <img class="lowres" alt="menu ad design layout" src="images/portfolio/low-res/rojo.jpg" data-image="images/portfolio/thumb/rojo.jpg">
         </div>
         <div class="details">
           <h3 class="red">ad design &amp; menu redesign</h3>
           <h6>Rojo Latin & American Food</h6>
           <p>I initially created this ad as a t-shirt design for a contest the restaurant held, but when I didn't win they asked me to adapt the design for an ad. (No hard feelings!) That ad ran in the weekly news magazine <em>Weld</em> for nearly two years.</p>
-          <p>After I designed the ad, we worked together doing routine menu updates along with a redesign of their cocktail menu. It was really immportant to them to have the design be lighter in color to conserve ink when printing, but it still had to fit in with the other existing menus. I created an interactive PDF so they can update their draft beers at will.</p>
+          <p>After I designed the ad, we worked together doing routine <a href="http://www.rojobirmingham.com/menus/">menu updates</a> along with a redesign of their cocktail menu. It was really immportant to them to have the design be lighter in color to conserve ink when printing, but it still had to fit in with the other existing menus. I created an interactive PDF so they can update their draft beers at will.</p>
         </div>
       </article>
       <!-- Central Research Associates -->
       <article class="slide">
         <div class="progressive img">
-          <img class="lowres" src="images/portfolio/low-res/central-trials.jpg" data-image="images/portfolio/thumb/central-trials.jpg">
-          <img class="overlay" src="" alt="wordpress custom theme design development">
+          <img class="lowres" alt="wordpress custom theme design development" src="images/portfolio/low-res/central-trials.jpg" data-image="images/portfolio/thumb/central-trials.jpg">
         </div>
         <div class="details">
           <h3 class="red">custom wordpress theme</h3>
