--- a/portfolio/transcend.html
+++ b/portfolio/transcend.html
@@ -42,9 +42,9 @@
     <article class="overview text-center">
       <h2>logo &amp; website designs</h2>
       <h5>freelance designer for <a href="http://transcendcounseling.org/" target="_blank">Transcend Family &amp; Individual Counseling</a></h5>
-      <a class="lightbox" href="#">
-        <img class="thumbnail" src="../images/case-study/transcend/mockup-small.png" height="600px" data-image="../images/case-study/transcend/mockup-large.png"/>
-      </a>
+      <div class="progressive img">
+        <img class="lowres" src="../images/case-study/transcend/mockup-small.png" height="600px" data-image="../images/case-study/transcend/mockup-large.png"/>
+      </div>
     </article>
     <article id="challenge" class="slide">
       <h3 class="red text-center">challenge</h3>
@@ -71,14 +71,14 @@
           <p class="note text-center"><span class="l-show">(right)</span> final page designs:</p>
         </div>
         <div class="cell m-half l-third text-center">
-          <a class="lightbox" href="#">
-            <img class="thumbnail contain" alt="site home page" src="../images/case-study/transcend/frontpage.png" data-image="../images/case-study/transcend/frontpage-full.png"/>
-          </a>
+          <div class="progressive img">
+            <img class="contain lowres" alt="site home page" src="../images/case-study/transcend/frontpage.png" data-image="../images/case-study/transcend/frontpage-full.png"/>
+          </div>
         </div>
         <div class="cell m-half l-third text-center">
-          <a class="lightbox" href="#">
-            <img class="thumbnail contain" alt="site content page" src="../images/case-study/transcend/subpage.png" data-image="../images/case-study/transcend/subpage-full.png"/>
-          </a>
+          <div class="progressive img">
+            <img class="contain lowres" alt="site content page" src="../images/case-study/transcend/subpage.png" data-image="../images/case-study/transcend/subpage-full.png"/>
+          </div>
         </div>
       </section>
     </article>
@@ -181,11 +181,5 @@
     </div>
   </footer>
   <script src="../js/scripts.js"></script>
-  <div id="lightbox-container">
-    <div id="lightbox">
-      <a class="close"><i class="fa fa-times fa-2x" aria-label="close"></i></a>
-      <span class="loading"><i class="fa fa-spinner fa-pulse fa-3x" aria-label="image loading"></i></span>
-    </div>
-  </div>
 </body>
 </html>
