--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <!-- TB purchase process -->
       <article class="slide">
         <a class="progressive img" href="portfolio/ticketbiscuit.html" title="check out my TicketBiscuit case study">
-          <img class="lowres" alt="purchase process design development" src="images/portfolio/low-res/purchase-process.jpg" data-image="images/portfolio/thumb/purchase-process.jpg" />
+          <img class="lowres" alt="purchase process design development" src="images/portfolio/low-res/purchase-process.jpg" data-image="images/portfolio/purchase-process.jpg" />
         </a>
         <div class="details">
           <h3 class="red">purchase process redesign</h3>
@@ -56,7 +56,7 @@
       <!-- Transcend -->
       <article class="right slide">
         <a class="progressive img" href="portfolio/transcend.html" title="check out my Transcend case study">
-          <img class="lowres" alt="therapy website design development" src="images/portfolio/low-res/transcend.jpg" data-image="images/portfolio/thumb/transcend.jpg">
+          <img class="lowres" alt="therapy website design development" src="images/portfolio/low-res/transcend.jpg" data-image="images/portfolio/transcend.jpg">
         </a>
         <div class="details">
           <h3 class="red">logo &amp; custom wordpress theme</h3>
@@ -68,7 +68,7 @@
       <!-- Tower -->
       <article class="slide">
         <div class="progressive img">
-          <img class="lowres" src="images/portfolio/low-res/tower.jpg" data-image="images/portfolio/thumb/tower.jpg" alt="literary magazine design layout">
+          <img class="lowres" src="images/portfolio/low-res/tower.jpg" data-image="images/portfolio/tower.jpg" alt="literary magazine design layout">
         </div>
         <div class="details">
           <h3 class="red">literary magazine layout &amp; curation</h3>
@@ -80,7 +80,7 @@
       <!-- Rojo Ad & Menus -->
       <article class="right slide">
         <div class="progressive img">
-          <img class="lowres" alt="menu ad design layout" src="images/portfolio/low-res/rojo.jpg" data-image="images/portfolio/thumb/rojo.jpg">
+          <img class="lowres" alt="menu ad design layout" src="images/portfolio/low-res/rojo.jpg" data-image="images/portfolio/rojo.jpg">
         </div>
         <div class="details">
           <h3 class="red">ad design &amp; menu redesign</h3>
@@ -92,7 +92,7 @@
       <!-- Central Research Associates -->
       <article class="slide">
         <div class="progressive img">
-          <img class="lowres" alt="wordpress custom theme design development" src="images/portfolio/low-res/central-trials.jpg" data-image="images/portfolio/thumb/central-trials.jpg">
+          <img class="lowres" alt="wordpress custom theme design development" src="images/portfolio/low-res/central-trials.jpg" data-image="images/portfolio/central-trials.jpg">
         </div>
         <div class="details">
           <h3 class="red">custom wordpress theme</h3>
