removing more lightbox stuff

--- a/portfolio/ticketbiscuit.html
+++ b/portfolio/ticketbiscuit.html
@@ -62,9 +62,9 @@
           <h6>research</h6>
           <div class="cell l-half grid">
             <div class="cell m-half l-full">
-              <a class="lightbox" href="#">
-                <img class="thumbnail" src="../images/case-study/ticketbiscuit/research.jpg" data-image="../images/case-study/ticketbiscuit/research.jpg"/>
-              </a>
+              <div class="progressive img">
+                <img class="lowres" src="../images/case-study/ticketbiscuit/research.jpg" data-image="../images/case-study/ticketbiscuit/research.jpg"/>
+              </div>
             </div>
             <p class="cell m-half l-full">The team shut ourselves in a conference room for a week and went through a condensed design sprint. We went over our current process, researched trends and competitors, and came up with extensive notes and sketches. We created personas representing various types of our users so we could address each of their needs as we made UI decisions.</p>
           </div>
