--- a/portfolio/ticketbiscuit.html
+++ b/portfolio/ticketbiscuit.html
@@ -182,6 +182,7 @@
       </section>
     </div>
   </footer>
+  <div id="scrollTop"><i class="fa fa-arrow-up" aria-label="back to top"></i></div>
   <script src="../js/scripts.js"></script>
 </body>
 </html>
