--- a/portfolio/transcend.html
+++ b/portfolio/transcend.html
@@ -180,6 +180,7 @@
       </section>
     </div>
   </footer>
+  <div id="scrollTop"><i class="fa fa-arrow-up" aria-label="back to top"></i></div>
   <script src="../js/scripts.js"></script>
 </body>
 </html>
