--- a/update.html
+++ b/update.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html class="update">
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-52747973-1"></script>
