--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <!-- styles & images -->
   <script src="https://use.fontawesome.com/1d1e476666.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab|Roboto:400,700" rel="stylesheet">
-  <link href="css/styles.min.css" rel="stylesheet">
+  <link href="css/styles.css" rel="stylesheet">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <!-- scripts -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
@@ -52,6 +52,13 @@
           <p>TicketBiscuit is an online ticketing platform where clients can manage their events and customers can buy tickets. In this project I simplified the purchase process and modernized the design. I focused on optimizing the experience for mobile users especially &mdash; reducing clicks and increasing conversion rates.</p>
           <a class="button" href="portfolio/ticketbiscuit.html" title="View Case Study">view case study</a>
         </div>
+        <aside>
+          <div class="banner left"></div>
+          <div class="content">
+            <a href="portfolio/tb-projects.html" title="View more TicketBiscuit projects"><h5>Ready for even more ticketing goodness? Check out some of my other TicketBiscuit projects. <i class="fa fa-arrow-right" aria-hidden="true"></i></h5></a>
+          </div>
+          <div class="banner right">
+        </aside>
       </article>
       <!-- Transcend -->
       <article class="right slide">
@@ -65,30 +72,6 @@
           <a class="button" href="portfolio/transcend.html" title="View Case Study">view case study</a>
         </div>
       </article>
-      <!-- Tower -->
-      <article class="slide">
-        <div class="progressive img">
-          <img class="lowres" src="images/portfolio/low-res/tower.jpg" data-image="images/portfolio/tower.jpg" alt="literary magazine design layout">
-        </div>
-        <div class="details">
-          <h3 class="red">literary magazine layout &amp; curation</h3>
-          <h6>Tower &mdash; University of Montevallo</h6>
-          <p>In my final year of school at Montevallo, I was chosen as the Editor-in-Chief of the university's literary magazine. I managed a team of section editors to solicit and select entries from the student body. At the end of the year, I combined these entries into a book that was printed and given to all students. On top of that, I was able to stay within my (somewhat meager) budget.</p>
-          <a href="https://issuu.com/hannahsteindesigns/docs/tower14">flip through a digital copy of the book</a>
-        </div>
-      </article>
-      <!-- Rojo Ad & Menus -->
-      <article class="right slide">
-        <div class="progressive img">
-          <img class="lowres" alt="menu ad design layout" src="images/portfolio/low-res/rojo.jpg" data-image="images/portfolio/rojo.jpg">
-        </div>
-        <div class="details">
-          <h3 class="red">ad design &amp; menu redesign</h3>
-          <h6>Rojo Latin & American Food</h6>
-          <p>I initially created this ad as a t-shirt design for a contest the restaurant held, but when I didn't win they asked me to adapt the design for an ad. (No hard feelings!) That ad ran in the weekly news magazine <em>Weld</em> for nearly two years.</p>
-          <p>After I designed the ad, we worked together doing routine <a href="http://www.rojobirmingham.com/menus/">menu updates</a> along with a redesign of their cocktail menu. It was really immportant to them to have the design be lighter in color to conserve ink when printing, but it still had to fit in with the other existing menus. I created an interactive PDF so they can update their draft beers at will.</p>
-        </div>
-      </article>
       <!-- Central Research Associates -->
       <article class="slide">
         <div class="progressive img">
@@ -100,6 +83,30 @@
           <p>Central Research Associates had two goals that sometimes conflicted — provide information for patients looking to enroll in free clinical trials as well as for other organizations and hospitals looking to partner with them. The challenge was to inform the latter without overwhelming the former.</p>
           <p>After we determined trial participants would be the primary audience, I accomplished this by placing a large, attention-grabbing call to action on the homepage that immediately whisks potential participants away to the page relevant to them. I created icons to categorize their text-heavy pages, grouped like content under linked subheadings, and instituted cross-linking throughout all the informative pages.</p>
           <a href="http://www.centraltrials.com/" title="Central Research Associates site">visit the Central Research Associates site</a>
+        </div>
+      </article>
+      <!-- Tower -->
+      <article class="slide right">
+        <div class="progressive img">
+          <img class="lowres" src="images/portfolio/low-res/tower.jpg" data-image="images/portfolio/tower.jpg" alt="literary magazine design layout">
+        </div>
+        <div class="details">
+          <h3 class="red">literary magazine management, layout &amp; curation</h3>
+          <h6>Tower &mdash; University of Montevallo</h6>
+          <p>In my final year of school at Montevallo, I was chosen as the Editor-in-Chief of the university's literary magazine. I managed a team of section editors to solicit and select entries from the student body. At the end of the year, I combined these entries into a book that was printed and given to all students. On top of that, I was able to stay within my (somewhat meager) budget.</p>
+          <a href="https://issuu.com/hannahsteindesigns/docs/tower14">flip through a digital copy of the book</a>
+        </div>
+      </article>
+      <!-- Rojo Ad & Menus -->
+      <article class="slide">
+        <div class="progressive img">
+          <img class="lowres" alt="menu ad design layout" src="images/portfolio/low-res/rojo.jpg" data-image="images/portfolio/rojo.jpg">
+        </div>
+        <div class="details">
+          <h3 class="red">ad design &amp; menu redesign</h3>
+          <h6>Rojo Latin & American Food</h6>
+          <p>I initially created this ad as a t-shirt design for a contest the restaurant held, but when I didn't win they asked me to adapt the design for an ad. (No hard feelings!) That ad ran in the weekly news magazine <em>Weld</em> for nearly two years.</p>
+          <p>After I designed the ad, we worked together doing routine <a href="http://www.rojobirmingham.com/menus/">menu updates</a> along with a redesign of their cocktail menu. It was really immportant to them to have the design be lighter in color to conserve ink when printing, but it still had to fit in with the other existing menus. I created an interactive PDF so they can update their draft beers at will.</p>
         </div>
       </article>
     </div>
