--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <p>TicketBiscuit is an online ticketing platform where clients can manage their events and customers can buy tickets. In this project I simplified the purchase process and modernized the design. I focused on optimizing the experience for mobile users especially &mdash; reducing clicks and increasing conversion rates.</p>
           <a class="button ignore" href="portfolio/ticketbiscuit.html" title="View Case Study">view case study</a>
         </div>
-        <aside>
+        <aside class="borders">
           <div class="content">
             <a href="portfolio/tb-projects.html" title="View more TicketBiscuit projects" class="ignore"><h5>Ready for even more ticketing goodness? Check out some of my other TicketBiscuit projects. <i class="fa fa-arrow-right" aria-hidden="true"></i></h5></a>
           </div>
