--- a/portfolio/ticketbiscuit.html
+++ b/portfolio/ticketbiscuit.html
@@ -55,7 +55,7 @@
         <p class="cell full note">examples of components before my update</p>
       </section>
     </article>
-    <aside>
+    <aside class="borders">
       <div class="content">
         <a href="tb-projects.html" title="View more TicketBiscuit projects" class="ignore"><h5>Ready for even more ticketing goodness? Check out some of my other TicketBiscuit projects. <i class="fa fa-arrow-right" aria-hidden="true"></i></h5></a>
       </div>
