--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="portfolio animate fade">
       <!-- TB purchase process -->
       <article class="slide lightbox">
-        <a class="progressive img" title="<a href='portfolio/ticketbiscuit.html'>check out my TicketBiscuit case study</a>" href="images/portfolio/purchase-process.jpg">
+        <a class="progressive img lbSlide" title="<a href='portfolio/ticketbiscuit.html'>check out my TicketBiscuit case study</a>" href="images/portfolio/purchase-process.jpg">
           <img class="lowres" alt="purchase process design development" src="images/portfolio/low-res/purchase-process.jpg" data-image="images/portfolio/purchase-process.jpg" />
         </a>
         <div class="details">
@@ -61,7 +61,7 @@
       </article>
       <!-- Transcend -->
       <article class="right slide lightbox">
-        <a class="progressive img"  title="<a href='portfolio/transcend.html'>check out my Transcend case study</a>" href="images/portfolio/transcend.jpg">
+        <a class="progressive img lbSlide"  title="<a href='portfolio/transcend.html'>check out my Transcend case study</a>" href="images/portfolio/transcend.jpg">
           <img class="lowres" alt="therapy website design development" src="images/portfolio/low-res/transcend.jpg" data-image="images/portfolio/transcend.jpg">
         </a>
         <div class="details">
@@ -73,7 +73,7 @@
       </article>
       <!-- Central Research Associates -->
       <article class="slide lightbox">
-        <a class="progressive img" href="images/portfolio/central-trials.jpg">
+        <a class="progressive img lbSlide" href="images/portfolio/central-trials.jpg">
           <img class="lowres" alt="wordpress custom theme design development" src="images/portfolio/low-res/central-trials.jpg" data-image="images/portfolio/central-trials.jpg">
         </a>
         <div class="details">
@@ -86,7 +86,7 @@
       </article>
       <!-- Tower -->
       <article class="slide right lightbox">
-        <a class="progressive img" href="images/portfolio/tower.jpg">
+        <a class="progressive img lbSlide" href="images/portfolio/tower.jpg">
           <img class="lowres" src="images/portfolio/low-res/tower.jpg" data-image="images/portfolio/tower.jpg" alt="literary magazine design layout">
         </a>
         <div class="details">
@@ -98,7 +98,7 @@
       </article>
       <!-- Rojo Ad & Menus -->
       <article class="slide lightbox">
-        <a class="progressive img" href="images/portfolio/rojo.jpg">
+        <a class="progressive img lbSlide" href="images/portfolio/rojo.jpg">
           <img class="lowres" alt="menu ad design layout" src="images/portfolio/low-res/rojo.jpg" data-image="images/portfolio/rojo.jpg">
         </a>
         <div class="details">
