--- a/portfolio/tb-projects.html
+++ b/portfolio/tb-projects.html
@@ -46,11 +46,11 @@
     <article class="slide">
       <h3 class="red">Registration &amp; Authentication Flow</h3>
       <div class="lightbox grid">
-        <a class="cell m-half s-full margin-bottom-20" href="../images/case-study/tb-projects/registration-old.png">
+        <a class="cell m-half s-full margin-bottom-20 lbSlide" href="../images/case-study/tb-projects/registration-old.png">
           <img src="../images/case-study/tb-projects/registration-old.png" />
           <span class="note text-center display-block">before</span>
         </a>
-        <a class="cell m-half s-full margin-bottom-20" href="../images/case-study/tb-projects/registration-new.png">
+        <a class="cell m-half s-full margin-bottom-20 lbSlide" href="../images/case-study/tb-projects/registration-new.png">
           <img src="../images/case-study/tb-projects/registration-new.png" />
           <span class="note text-center display-block">after</span>
         </a>
@@ -82,19 +82,19 @@
       <div class="lightbox grid">
         <div class="cell m-half s-full margin-bottom-10">
           <div class="note text-center">before</div>
-          <a href="../images/case-study/tb-projects/offers-multiple-old.png">
+          <a class="lbSlide" href="../images/case-study/tb-projects/offers-multiple-old.png">
             <img class="margin-bottom-10" src="../images/case-study/tb-projects/offers-multiple-old.png" />
           </a>
-          <a href="../images/case-study/tb-projects/offers-old.png">
+          <a class="lbSlide" href="../images/case-study/tb-projects/offers-old.png">
             <img class="margin-bottom-10" src="../images/case-study/tb-projects/offers-old.png" />
           </a>
         </div>
         <div class="cell m-half s-full margin-bottom-10">
           <div class="note text-center">after</div>
-          <a href="../images/case-study/tb-projects/offers-old.png">
+          <a class="lbSlide" href="../images/case-study/tb-projects/offers-multiple-new.png">
             <img class="margin-bottom-10" src="../images/case-study/tb-projects/offers-multiple-new.png" />
           </a>
-          <a href="../images/case-study/tb-projects/offers-new.png">
+          <a class="lbSlide" href="../images/case-study/tb-projects/offers-new.png">
             <img src="../images/case-study/tb-projects/offers-new.png" />
           </a>
         </div>
