updating source control with latest version

--- a/index.html
+++ b/index.html
@@ -40,7 +40,11 @@
     </header>
   <!-- content -->
   <section id="content" class="width">
-    <h2 class="text-center">front-end development <span class="break">&amp; design</span></h2>
+    <h2 class="text-center">
+        user experience <span class="stress">&amp;</span> 
+        <span class="break">web design <span class="stress">&amp;</span></span>
+        <span class="break">front-end development</span>
+    </h2>
     <div class="portfolio animate fade">
       <!-- TB purchase process -->
       <article class="slide lightbox">
@@ -123,13 +127,13 @@
             </span>
             <span>hannahsteindesigns@gmail.com</span>
           </a>
-          <a href="https://www.linkedin.com/in/hannahsteindesigns" title="connect on linkedin">
+          <!-- <a href="https://www.linkedin.com/in/hannahsteindesigns" title="connect on linkedin">
             <span class="fa-stack">
               <i class="fa fa-circle fa-stack-2x" aria-hidden="true"></i>
               <i class="fa fa-linkedin fa-stack-1x" aria-hidden="true"></i>
             </span>
             <span>linkedin.com/in/hannahsteindesigns</span>
-          </a>
+          </a> -->
           <!-- <a href="https://www.behance.net/hannahsteindesigns" title="see more of my work on behance">
             <img src="images/behance.svg" width="24" />
             <span>behance.net/hannahsteindesigns</span>
