--- a/about.html
+++ b/about.html
@@ -39,16 +39,25 @@
     </header>
   <!-- content -->
   <section id="content" class="width about">
-    <h2 class="text-center">about me</h2>
+    <h3 class="text-center stress">I design user interfaces and develop the front-end code to make those designs a reality.</h3>
     <article class="bio">
       <div>
-        <p>I'm a <span class="stress">front-end developer</span> and <span class="stress">designer</span>. I take projects from initial sketches through static wireframes and basic prototypes all the way to the live finished product.</p>
-        <p>I work at <span class="stress">Hospicelink - StateServ</span> in Birmigham, Alabama, where I create and update interfaces for a client-facing webapp. Our software allows hospices to order medical equipment and manage patients and the equipment provider to manage delivery and pickup orders.</p>
-        <p>My roots are in print design, but these days almost everything is on the web &mdash; including my work. I'm increasingly passionate about <span class="stress">user experience</span> as the guiding principle for everything I create.</p>
-        <p><a href="images/Stein-resume.pdf" alt="Hannah's resume" target="_blank">Download my PDF resume.</a></p>
+          <p>I take projects from initial sketches through static wireframes and basic prototypes all the way to the live finished product. I'm increasingly passionate about user experience design as a guiding principle for everything I create.</p>
+          <p>I believe that technology should be above all make life easier. I consider myself an advocate for the user and love the challenge of marrying the best interests of user and business to create a solution that benefits everyone.</p>
+          <p>My early roots are in print design, and I still sometimes rely on those fundamental design principles and knowledge of how people interact with information on a base level. I'm fascinated with how those principles scale &mdash; or don't &mdash; to web and mobile interactions as well as the unique problems new technologies face.</p>
+          <p>In my current position at Hospicelink - StateServ in Birmingham, Alabama, I create and update interfaces for a client-facing web app. Our software allows hospices to order medical equipment and manage patients, and the equipment provider to manage delivery and pickup orders.</p>
+          <p>My responsibilities include researching and gathering feedback from both internal and external users of our software, identifying inefficiencies, designing intuitive interfaces, and implementing the front-end code to make those designs a reality.</p>
       </div>
       <aside>
-        <img src="images/selfie-square.jpg" title="Hannah Stein" />
+        <p><img src="images/hannah.jpg" title="It's me, Hannah!" /></p>
+        <p><a href="images/Stein-resume.pdf" alt="Hannah's resume" target="_blank">View or download my PDF resume.</a></p>
+        <h4 class="stress">skillset</h4>
+        <h6 style="margin-bottom: .25em">research</h6>
+        <span>remote user testing, user experience interviews, survey design</span>
+        <h6 style="margin-bottom: .25em; margin-top: 1.25em">design</h6>
+        <span>wireframing and prototyping using Sketch, InVision, Adobe XD, Photoshop, Illustrator</span>
+        <h6 style="margin-bottom: .25em; margin-top: 1.25em">development</h6>
+        <span>HTML5, CSS3, SCSS, JavaScript (including jQuery), React</span>
       </aside>
     </article>
   </section>
@@ -65,13 +74,13 @@
             </span>
             <span>hannahsteindesigns@gmail.com</span>
           </a>
-          <a href="https://www.linkedin.com/in/hannahsteindesigns" title="connect on linkedin">
+          <!-- <a href="https://www.linkedin.com/in/hannahsteindesigns" title="connect on linkedin">
             <span class="fa-stack">
               <i class="fa fa-circle fa-stack-2x" aria-hidden="true"></i>
               <i class="fa fa-linkedin fa-stack-1x" aria-hidden="true"></i>
             </span>
             <span>linkedin.com/in/hannahsteindesigns</span>
-          </a>
+          </a> -->
           <!-- <a href="https://www.behance.net/hannahsteindesigns" title="see more of my work on behance">
             <img src="images/behance.svg" width="24" />
             <span>behance.net/hannahsteindesigns</span>
