--- a/portfolio/ticketbiscuit.html
+++ b/portfolio/ticketbiscuit.html
@@ -140,13 +140,13 @@
             </span>
             <span>hannahsteindesigns@gmail.com</span>
           </a>
-          <a href="https://www.linkedin.com/in/hannahsteindesigns" title="connect on linkedin">
+          <!-- <a href="https://www.linkedin.com/in/hannahsteindesigns" title="connect on linkedin">
             <span class="fa-stack">
               <i class="fa fa-circle fa-stack-2x" aria-hidden="true"></i>
               <i class="fa fa-linkedin fa-stack-1x" aria-hidden="true"></i>
             </span>
             <span>linkedin.com/in/hannahsteindesigns</span>
-          </a>
+          </a> -->
           <!-- <a href="https://www.behance.net/hannahsteindesigns" title="see more of my work on behance">
             <img src="images/behance.svg" width="24" />
             <span>behance.net/hannahsteindesigns</span>
