honeytrap for contact form

--- a/about.html
+++ b/about.html
@@ -115,6 +115,7 @@
               <textarea required name="message" id="message"></textarea>
               <label for="message" placeholder="Send me a message"></label>
             </div>
+            <input type="text" id="website" name="website" style="display:none;">
             <button type="submit" id="submitbtn" class="full">Send</button>
           </form>
         </div>
