--- a/index.html
+++ b/index.html
@@ -40,13 +40,28 @@
     </div>
   </header>
   <!-- content -->
-  <section id="content" class="width">
-    <h2 class="text-center">
-        user experience <span class="stress">&amp;</span> 
-        <span class="break">web design <span class="stress">&amp;</span></span>
-        <span class="break">front-end development</span>
+  <main id="content" class="width">
+    <section id="hero">
+      <div id="name">
+        <div class="box slide_up"></div>
+        <h2 class="text slide_up">
+          <span>Hannah</span>
+          <span> Stein</span>
     </h2>
-    <div class="portfolio animate fade">
+      </div>
+      <div id="intro">
+        <div class="box slide_up"></div>
+        <h3 class="text slide_up">
+          <span>centering empathy for users </span>
+          <span>to craft delightful experiences</span>
+        </h2>
+      </div>
+    </section>
+
+
+
+
+    <section class="portfolio animate fade">
       <!-- TB purchase process -->
       <article class="slide lightbox">
         <a class="progressive img lbSlide" title="<a href='portfolio/ticketbiscuit.html'>check out my TicketBiscuit case study</a>" href="images/portfolio/purchase-process.jpg">
